# DebugAI

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  Dockerfile.cloud  LICENSE  README.md  demo.py  docker-compose.yml  features.md  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  run.sh  timeline.html
.github/workflows/: ci.yml  publish.yml
Debug_AI/: .thumbnail  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css  test.ipynb
Debug_AI/components/Badge/: Badge.card.html  Badge.d.ts  Badge.jsx
Debug_AI/components/Button/: Button.card.html  Button.d.ts  Button.jsx
Debug_AI/components/CodeBlock/: CodeBlock.card.html  CodeBlock.d.ts  CodeBlock.jsx
Debug_AI/components/DiagnosticCard/: DiagnosticCard.card.html  DiagnosticCard.d.ts  DiagnosticCard.jsx
Debug_AI/components/SignalIndicator/: SignalIndicator.card.html  SignalIndicator.d.ts  SignalIndicator.jsx
Debug_AI/css/: base.css  components.css  tokens.css
Debug_AI/foundations/: colors.card.html  spacing.card.html  type.card.html
Debug_AI/templates/landing/: ds-base.js  index.html  landing.css  main.jsx  sections-content.jsx  sections-hero.jsx
debugai/: __init__.py  agent.py  analyze.py  calibration.py  cli.py  config.py  detectors.py  diagnosis.py  evals.py  examples.py  explainer.py  feedback.py  fix_artifact.py  judge.py  metrics.py  models.py  pipeline.py  prompt_audit.py  providers.py  report.py  schema.py  sdk.py  signals.py  thresholds.json  thresholds.py  tracing.py  validators.py
debugai/agents/: __init__.py  base.py  builtin.py  registry.py  types.py
debugai/integrations/: __init__.py  langchain.py
docs/: introduction.mdx  mint.json  quickstart.mdx
docs/failures/: overview.mdx
docs/sdk/: agent.mdx  analyze.mdx  debug-report.mdx  evals.mdx  feedback.mdx  pipeline.mdx  prompt-audit.mdx
docs/self-hosting/: docker.mdx
frontend/: build.mjs
scripts/: benchmark.py
server/: __init__.py  app.py  auth.py  db.py  email.py  paths.py  security.py  store.py  ui_adapter.py
server/static/: accept-invite.html  account.html  admin.html  admin.js  analytics.js  app-router.js  auth-app.jsx  auth.css  dashboard.css  dashboard.html  dashboard.jsx  docs.css  docs.html  home.html  login.html  playground.html  playground.jsx  pricing.css  pricing.html  register.html  reset-password.html  verify-email.html
tests/: conftest.py  test_agent_trace.py  test_agents.py  test_analyze.py  test_auth.py  test_b3_b10.py  test_benchmark.py  test_calibration.py  test_cli.py  test_completion.py  test_deepmode.py  test_detectors.py  test_evals_pipeline.py  test_integrations.py  test_judge.py  test_metrics.py  test_prompt_audit.py  test_providers.py  test_report.py  test_robustness.py  test_sdk.py  test_server.py  test_signals.py  test_tracing.py  test_ui_adapter.py
tests/dataset/: eval.json  failures.json
